# vxpy

./: .buildinfo  .gitignore  Buffer.py  Buffers.py  CMN2D_bw.py  CMN2D_proper.py  Camera.py  Config.py  Controller.py  Def.py  Default.py  Definition.py  DoomViewer.py  FS_tex_1511.glsl  GUI.py  Geometry.py  Helper.py  IPC.py  Logging.py  MANIFEST.in  MappApp.py  MappApp_Com.py  MappApp_Communication.py  MappApp_Control.py  MappApp_Controller.py  MappApp_Defaults.py  MappApp_Definition.py  MappApp_GUI.py  MappApp_Geometry.py  MappApp_Helper.py  MappApp_ImageProcessing.py  MappApp_OpenGL.py  MappApp_Output.py  MappApp_Processes.py  MappApp_Protocol.py  MappApp_Shader.py  MappApp_Startup.py  MappApp_StimulationProtocol.py  MappApp_Stimulation_Protocol.py  MappApp_Stimulus.py  (+27 more)
.doctrees/: environment.pickle  index.doctree
buffers/: CameraBuffers.py  IoBuffers.py
config/: default.ini
configs/: default.ini  default_TIS.ini  default_planar.ini  default_planar_multicam.ini  default_spherical.ini  giulia_sacc_trig_flash.ini  omr_behavior.ini  omr_behavior_virtual_cam.ini  sara_omr.ini
core/: process.py  protocol.py  routine.py  visual.py
devices/: Arduino.py  Arduino_IO.ino  Camera.py
dlls/: README.md
doc/: conf.py  index.rst  run_build.sh
docs/: conf.py  index.rst
docs_old/: api_reference.rst  conf.py
dump/: CMN2D_bw.py  CMN2D_proper.py  Demo_1DGlider3Point.py  Nash_Arduino_Firmata.py  create_samples.py  export_mpeg.py  glSti.py  icosphereTry2.py
gui/: Calibration.py  Camera.py  CameraAddons.py  CameraStream.py  CameraWidgets.py  Controls.py  DisplaySettings.py  Integrated.py  Io.py  ProtocolControl.py  Protocols.py  StimulationProtocols.py  VideoStreamer.py  __init__.py
helper/: Basic.py  Geometry.py  MappApp_Helper.py  NashHelper.py  gui.py  nash_helper.py
mappapp/: Def.py  Default.py  IPC.py  Logging.py  __init__.py  __main__.py
models/: BasicPlane.py  BasicSphere.py  CMNSpheres.py  IcoSphere.py  Icosahedron.py  Insta360OneX.py  NashCMNSpheres.py  UVSphere.py  dividable_icosphere.py
process/: Base.py  Camera.py  Controller.py  Display.py  FrameGrabber.py  GUI.py  Gui.py  IO.py  Io.py  Logger.py  Process.py  Worker.py  __init__.py
protocols/: Calibration.py  Example01.py  Gliders.py  Planar_Grating.py  PlaneCalibration.py  Protocol01.py  ProtocolCMN.py  ProtocolInsta360.py  Spherical_Calibration.py  Spherical_Gratings.py  TestProtocol.py  WaterRipplesProtcols.py  __init__.py  ico_proj_test.py
routines/: Camera.py  Display.py  Io.py  __init__.py
samples/: README.md
shaders/: _f_base.shader  _v_base.shader  _v_baseMono.glsl  _v_mono_base.shader  f_CMN2D.shader  f_checkerboard.shader  f_default.shader  f_grating.shader  f_minminmap.shader  f_mono_vcolor.shader  f_tex.shader  f_ucolor.shader  f_uvmap.shader  v_CMN2D.shader  v_checkerboard.shader  v_default.shader  v_mono_tex.shader  v_mono_vcolor.shader  v_tex.shader  v_ucolor.shader
source/: api_reference.html  create_protocol.html  create_routine.html  create_visual.html  create_visual_base_advanced.html  installation_guide.html  quickstart_guide.html  vxpy_structure.html
startup/: __init__.py  camera_setup.py  display_setup.py  main.py  utils.py
stimuli/: CMN2D.py  Checkerboard.py  ContiguousMotionNoise.py  Grating.py  IcoProj.py  Insta360OneX.py  Test01.py  WaterRipples.py  ico_proj.py
tasks/: ComposeRecordings.py  readFrames.py
utils/: misc.py  plane.py  sphere.py
visuals/: Blank.py  Checkerboard.py  ContiguousMotionNoise.py  Glider.py  Grating.py  Insta360OneX.py  WaterRipples.py  __init__.py
vxpy/: Config.py  Def.py  Default.py  Logging.py  __init__.py  __main__.py  calib.py  cli.py  config.py  definitions.py
(+467 files in other folders)
