[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vxpy"
version = "0.1.6"
description = "vxPy - Vision experiments in Python"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering'
]
keywords = ['neuroscience', 'experiment', 'visual stimulation', 'behavioral tracking']
dependencies = [
    'ffmpeg-python',
    'gitpython',
    'glfw',
    'h5py',
    'matplotlib',
    'numpy==1.26.4',
    'opencv-python-headless',
    'panda3d',
    'pyFirmata',
    'pyqtdarktheme',
    'pyqtgraph',
    'pyyaml',
    'PySide6==6.4.3',
    'quaternionic',
    'requests',
    'scipy',
    'setuptools',
    'telemetrix',
    'vispy',
    'wres; platform_system == "Windows"'
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ['.']
include = ['vxpy*']

[project.optional-dependencies]
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/vxpy'

[project.scripts]
vxpy = 'vxpy.__main__:main'
